--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.achat</groupId>
+    	<artifactId>backend</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
 	</dependencies>
 
 	<build>
